# FastAndRobustMeshArrangements

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.pro  formatted_table.xlsx  io_functions.h  main.cpp  mesh_arrangement.pro  prove.py  run_mesh_arrangement_tests.py  run_surface_mapping_check.py  search_mesh.py  solve_intersections.cpp  solve_intersections.h  test_results.xlsx  ~$test_results.xlsx
Test_folder/: prove.py  run_mesh_arrangement_tests.py  test_results.xlsx  test_results_1.xlsx  test_results_optimized.xlsx
Test_folder/history-results/new_version/: mesh_arrangement  test_results.xlsx
code/: aux_structure.cpp  aux_structure.h  common.h  custom_stack.h  debug.h  fast_trimesh.cpp  fast_trimesh.h  intersection_classification.cpp  intersection_classification.h  io_functions.cpp  io_functions.h  processing.cpp  processing.h  solve_intersections.cpp  solve_intersections.h  tree.cpp  tree.h  triangle_soup.cpp  triangle_soup.h  triangulation.cpp  triangulation.h
data/: 40509.stl  mesh_arrangement  three_cubes.stl  two_spheres.stl
data/test/: ac0.off  ac1.off  ac10.off  ac11.off  ac12.off  ac13.off  ac14.off  ac15.off  ac16.off  ac17.off  ac18.off  ac19.off  ac2.off  ac20.off  ac3.off  ac4.off  ac5.off  ac6.off  ac7.off  ac8.off  ac9.off  cr0.off  cr1.off  cr10.off  cr11.off  cr12.off  cr13.off  cr2.off  cr3.off  cr4.off  cr5.off  cr6.off  cr7.off  cr8.off  cr9.off  sc0.off  sc1.off  sc10.off  sc11.off  sc12.off  (+19 more)
history-results/new_version/: test_results.xlsx
history-results/old_version_results/: mesh_arrangement  test_results_old_version.xlsx
indirect_predicates/: implicit_point.cpp  implicit_point.h  numerics.cpp  numerics.h
indirect_predicates/predicates/: indirect_predicates.cpp  indirect_predicates.h
intersections_detection/: intersection_classification.cpp  intersection_classification.h
non_manifold/: nmIntersections.cpp  nonManifold.cpp  nonManifold.h
postprocessing/: post_processing.cpp  post_processing.h
preprocessing/: pre_processing.cpp  pre_processing.h
processing/: processing.h
structures/: aux_structure.cpp  aux_structure.h  aux_structure.tpp  common.h  fast_trimesh.cpp  fast_trimesh.h  fast_trimesh.tpp  tree.h  triangle_soup.cpp  triangle_soup.h  triangle_soup.tpp
triangulation/: triangulation.cpp  triangulation.h
